[tool.poetry]
name = "dockipass"
version = "0.1.0"
description = "A tool to setup docker on Mac using Multipass"
authors = ["Christoffer Söderberg <christoffer@delitech.se>"]
license = "BSD-2"

[tool.poetry.dependencies]
python = "^3.8"
nuclear = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "scripts:test"
test-verbose = "scripts:test_verbose"
test-features = "scripts:test_features"
